# Copyright (C) 2024 The Qt Company Ltd.
# SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only WITH Qt-GPL-exception-1.0

add_subdirectory(qgaxis-abstract)
add_subdirectory(qgaxis-barcategory)
add_subdirectory(qgaxis-value)
add_subdirectory(qgbars)
add_subdirectory(qgbars-set)
add_subdirectory(qglines)
add_subdirectory(qgscatter)
add_subdirectory(qgtheme-graph)
add_subdirectory(qgtheme-series)
add_subdirectory(qgxychart)
